close keyboard after profile editing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="license">Пользовательское соглашение</string>
     <string name="you_entered_as">Вы вошли как</string>
     <string name="balance">Баланс</string>
-    <string name="offers_caption">Скачивайте и запускайте приложения,\nчтобы получать бонусы</string>
+    <string name="offers_caption">Скачивайте и запускайте приложения,\nчтобы получить бонусы</string>
     <string name="input_profile">Заполнить профиль</string>
     <string name="offers">Приложения</string>
     <string name="input_profile_cost">+10a</string>
