--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,6 +121,6 @@
     <string name="balance_profit">Бонус за %s</string>
     <string name="in_progress">В процессе</string>
     <string name="failed">Не выполнено</string>
-    <string name="success">ыполнено успешно</string>
+    <string name="success">Выполнено успешно</string>
 
 </resources>
