--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,6 @@
     <string name="failed">Не выполнено</string>
     <string name="success">Выполнено успешно</string>
     <string name="re_enter">Произошла непредвиденная ошибка - перезайдите в свой профиль</string>
+    <string name="password_was_changed">Пароль успешно изменен</string>
 
 </resources>
