--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="main_info">Основная информация</string>
     <string name="phone_was_not_confirmed">Не подтвержден</string>
     <string name="confirm_phone"><![CDATA[Подтвердить номер телефона]]></string>
+    <string name="confirm_phone_short"><![CDATA[Подтвердить номер]]></string>
 
     <string name="russia">Россия</string>
     <string name="belarus">Беларусь</string>
@@ -131,5 +132,10 @@
     <string name="network_problem">Кажется, нет интернета :(\nНажми на экран, чтобы попробовать ещё раз!</string>
     <string name="promo_caption">Промо-код (если есть)</string>
     <string name="promo">Промо-код:</string>
+    <string name="code_caption">Код</string>
+    <string name="sms_was_went">Мы отправили вам смс с кодом,\nвведите его ниже</string>
+    <string name="confirm_phone_info_1">Если в течение 15 минут код не пришел,</string>
+    <string name="confirm_phone_info_2">обратитесь в службу поддержки</string>
+    <string name="tech_support" />
 
 </resources>
