--- a/dolphin/src/main/res/values/strings.xml
+++ b/dolphin/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="exception">Ошибка</string>
-    <string name="ok">Хорошо</string>
+    <string name="ok">Закрыть</string>
 </resources>
