--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,7 +151,8 @@
     <string name="sex_caption">Ваш пол</string>
     <string name="sex_male">Мужской</string>
     <string name="sex_female">Женский</string>
-    <string name="you_has_rooted_device">Использование AppBonus с root-доступом запрещено</string>
+    <string name="you_has_rooted_device">Использование AppBonus на устройстве с root-доступом запрещено</string>
+    <string name="you_has_unreal_device">Использование AppBonus на эмуляторе запрещено</string>
     <string name="meet_friends_title">Получай дополнительный доход\nот каждого выполненного\nдрузьями задания</string>
     <string name="meet_friends_promo">Отправь промо-код другу,\nи он получит %1$s\nпри регистрации,\nа ты - дополнительный доход</string>
     <string name="copy_that_link">Скопируй ссылку на приложение\nсо своим промо-кодом</string>
