--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,5 +159,6 @@
     <string name="current_password_caption">Текущий пароль</string>
     <string name="current_password_inputed_wrongly">Текущий пароль введен неверно</string>
     <string name="sharing_does_not_available">Этим приложением нельзя поделиться</string>
+    <string name="wrong_login_or_password">Неверный логин или пароль</string>
 
 </resources>
